--- a/analysis/plotClinvarAll.ipynb
+++ b/analysis/plotClinvarAll.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 1,
    "id": "2316f9fe-4c22-4cbd-bd12-cb2b687fdbd9",
    "metadata": {
     "tags": []
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 2,
    "id": "e1bce4bf-9768-460c-966b-79643da4721c",
    "metadata": {
     "tags": []
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 3,
    "id": "2f11be89",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 4,
    "id": "ac316e6f",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 5,
    "id": "4349d396-1d14-4e76-8d9a-657b1ea38d8d",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 6,
    "id": "52d0fca6-797e-40af-91c9-38046eeadd07",
    "metadata": {
     "tags": []
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 7,
    "id": "3502b320-8f88-40bb-9fb5-3d3c2f62cae4",
    "metadata": {
     "tags": []
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 8,
    "id": "7df7e03a",
    "metadata": {
     "tags": []
@@ -267,7 +267,7 @@
        "(-3.0, 3.0)"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -312,12 +312,14 @@
    "id": "8fa7b6b7",
    "metadata": {},
    "source": [
-    "## dRe histogram for significant hits only (adj. p-value < 0.01)"
+    "## $\\Delta R_e$ histogram for significant hits only (adj. p-value < 0.01)\n",
+    "\n",
+    "Despite tile lengths increasing, the overall magnitude of the mutation effect on $\\Delta R_e$ stays the same (x- and y-axis are linked in all panels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 9,
    "id": "08e8e30b",
    "metadata": {
     "tags": []
@@ -329,7 +331,7 @@
        "Text(0.5, 0, '$\\\\langle R_{e}^{mut}-R_{e}^{WT} \\\\rangle \\\\ (\\\\AA)$')"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -370,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 10,
    "id": "feb6ba8d-e843-418d-8edd-6aaee3eefa9a",
    "metadata": {
     "tags": []
@@ -380,7 +382,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ssukenik\\AppData\\Local\\Temp\\ipykernel_16044\\2861353907.py:9: SettingWithCopyWarning: \n",
+      "C:\\Users\\ssukenik\\AppData\\Local\\Temp\\ipykernel_11632\\2861353907.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -410,7 +412,7 @@
    "source": [
     "fig,ax=plt.subplots(figsize=[7,5])\n",
     "window='35'\n",
-    "p_val_max=-np.log10(0.05)\n",
+    "p_val_max=-np.log10(0.01)\n",
     "delta_min = 0\n",
     "plt.rcParams.update({'font.size': 18})\n",
     "\n",
@@ -447,12 +449,12 @@
    "id": "ddf4d2d1",
    "metadata": {},
    "source": [
-    "## dRe histogram for Fig. 2"
+    "## $\\Delta R_e$ histogram for Fig. 2B"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 11,
    "id": "dc6e8f18",
    "metadata": {},
    "outputs": [
@@ -460,7 +462,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ssukenik\\AppData\\Local\\Temp\\ipykernel_16044\\3160795610.py:15: MatplotlibDeprecationWarning: The 'b' parameter of grid() has been renamed 'visible' since Matplotlib 3.5; support for the old name will be dropped two minor releases later.\n",
+      "C:\\Users\\ssukenik\\AppData\\Local\\Temp\\ipykernel_11632\\3160795610.py:15: MatplotlibDeprecationWarning: The 'b' parameter of grid() has been renamed 'visible' since Matplotlib 3.5; support for the old name will be dropped two minor releases later.\n",
       "  ax.grid(b=True,lw=0.2)\n"
      ]
     },
@@ -504,12 +506,12 @@
    "id": "cd891252-044e-46be-ac37-9af593a96b96",
    "metadata": {},
    "source": [
-    "## Mutations by type for Fig. 2"
+    "## Mutations by type for Fig. 2C"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 12,
    "id": "4e69354d-19c7-43b8-b89a-55ee844993e0",
    "metadata": {
     "tags": []
@@ -560,7 +562,9 @@
    "id": "7d3e552a-da33-4fe7-ad0c-3ccfe7b401dc",
    "metadata": {},
    "source": [
-    "# Output for GO onthology\n",
+    "# GO onthology\n",
+    "\n",
+    "## create GO analysis input files\n",
     "\n",
     "The text files written here are used to feed into G:Profiler https://biit.cs.ut.ee/gprofiler/gost\n",
     "all.txt is used as the background for enrichment."
@@ -568,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 13,
    "id": "b7a0027a-7f4c-4c0d-8d90-177b1269a310",
    "metadata": {
     "tags": []
@@ -589,12 +593,12 @@
    "id": "c7760fea",
    "metadata": {},
    "source": [
-    "## GO analysis for Fig. 2"
+    "## GO molecular function enrichement for Fig. 2D"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 14,
    "id": "c20aa522",
    "metadata": {},
    "outputs": [
@@ -628,8 +632,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9e20564d-8e01-417c-8030-9d9408907041",
+   "metadata": {},
+   "source": [
+    "## GO cellular component enrichement for proteins experiencing missense-driven compaction"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 15,
    "id": "1a2e2d44",
    "metadata": {},
    "outputs": [
@@ -660,8 +672,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "449dc2a3-97cd-4ea3-af8a-cf1f819c16ef",
+   "metadata": {},
+   "source": [
+    "## GO biological process enrichement for proteins experiencing missense-driven compaction"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 16,
    "id": "424bf35b",
    "metadata": {},
    "outputs": [
@@ -690,14 +710,6 @@
     "    ax.set_xlim(1,3)\n",
     "    ax.set_ylabel('')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd84e399",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
